--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="homepage-style.css">
 <body>
     <header>
-        <img src="\images\logo.jpeg" alt="logo" srcset="" id="homelogo">
+        <img src="/images/logo.jpeg" alt="logo" srcset="" id="homelogo">
         <nav>
             <ul>
                 <li><a href="home.html" id="home" title="Home Page">Home</a></li>
